@@ -37,13 +37,16 @@
  * only if the new code is made subject to such option by the copyright
  * holder.
  */
-
 package com.sun.jersey.samples.jacksonjsonprovider;
 
 import javax.ws.rs.ext.ContextResolver;
 import javax.ws.rs.ext.Provider;
+import org.codehaus.jackson.map.AnnotationIntrospector;
+import org.codehaus.jackson.map.AnnotationIntrospector.Pair;
 import org.codehaus.jackson.map.ObjectMapper;
 import org.codehaus.jackson.map.SerializationConfig.Feature;
+import org.codehaus.jackson.map.introspect.JacksonAnnotationIntrospector;
+import org.codehaus.jackson.xc.JaxbAnnotationIntrospector;
 
 /**
  *
@@ -52,11 +55,50 @@ import org.codehaus.jackson.map.SerializationConfig.Feature;
 @Provider
 public class MyObjectMapperProvider implements ContextResolver<ObjectMapper> {
 
+    final ObjectMapper defaultObjectMapper;
+    final ObjectMapper combinedObjectMapper;
+
+    public MyObjectMapperProvider() {
+        defaultObjectMapper = createDefaultMapper();
+        combinedObjectMapper = createCombinedObjectMapper();
+    }
+
     @Override
     public ObjectMapper getContext(Class<?> type) {
 
+        if (type == CombinedAnnotationBean.class) {
+            return combinedObjectMapper;
+        } else {
+            return defaultObjectMapper;
+        }
+    }
+
+    private static ObjectMapper createCombinedObjectMapper() {
+
+        Pair combinedIntrospector = createJaxbJacksonAnnotationIntrospector();
+        ObjectMapper result = new ObjectMapper();
+        result.configure(Feature.WRAP_ROOT_VALUE, true);
+        result.getDeserializationConfig().setAnnotationIntrospector(combinedIntrospector);
+        result.getSerializationConfig().setAnnotationIntrospector(combinedIntrospector);
+
+        return result;
+    }
+
+
+    private static ObjectMapper createDefaultMapper() {
+
         ObjectMapper result = new ObjectMapper();
         result.configure(Feature.INDENT_OUTPUT, true);
+
         return result;
+    }
+
+
+    private static Pair createJaxbJacksonAnnotationIntrospector() {
+
+        AnnotationIntrospector jaxbIntrospector = new JaxbAnnotationIntrospector();
+        AnnotationIntrospector jacksonIntrospector = new JacksonAnnotationIntrospector();
+
+        return new AnnotationIntrospector.Pair(jaxbIntrospector, jacksonIntrospector);
     }
 }
